# benchmarking-backend

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  post.lua  pyproject.toml  requirements.txt  streamlit_app.py
backends/golang/: beego_service.go  chi_service.go  echo_service.go  fiber_service.go  gin_service.go  gokit_service.go  kratos_service.go
backends/python/: bottle_app.py  django_app.py  fastapi_app.py  flask_app.py  sanic_app.py  starlette_app.py  tornado_app.py
dockerfiles/golang/: Dockerfile.beego  Dockerfile.chi  Dockerfile.echo  (+4 more)
golang/: generate_backends.py  generate_dockerfiles.py
python/: README.md  generate_backends.py  generate_dockerfiles.py
results/: beego_results.csv  beego_results.txt  bottle_results.csv  bottle_results.txt  chi_results.csv  chi_results.txt  django_results.csv  django_results.txt  echo_results.csv  echo_results.txt  fastapi_results.csv  fastapi_results.txt  fiber_results.csv  fiber_results.txt  flask_results.csv  flask_results.txt  gin_results.csv  gin_results.txt  gokit_results.csv  gokit_results.txt  golang_beego_results.csv  golang_beego_results.txt  golang_chi_results.csv  golang_chi_results.txt  golang_echo_results.csv  golang_echo_results.txt  golang_fiber_results.csv  golang_fiber_results.txt  golang_gin_results.csv  golang_gin_results.txt  golang_gokit_results.csv  golang_gokit_results.txt  golang_kratos_results.csv  golang_kratos_results.txt  kratos_results.csv  kratos_results.txt  python_bottle_results.csv  python_bottle_results.txt  python_django_results.csv  python_django_results.txt  (+16 more)
(+67 files in other folders)
